--- a/Css/style.css
+++ b/Css/style.css
@@ -54,8 +54,19 @@ nav .logo span{
     transition:0.3s;
 }
 .slider{
-    margin-left:20px;
-    margin-right:20px;
-    width: 1850px;
+    width: 1872px;
     height:650px;
+}
+.products{
+    width: 1872px;
+    height:500px;
+    display:flex;
+   padding-left: 100px;
+}
+.items{
+    width:300px;
+    height:400px;
+    background-color: rgb(109, 103, 103);
+    margin-left:40px;
+    margin-top:30px;
 }
