--- a/Css/style1.css
+++ b/Css/style1.css
@@ -5,22 +5,35 @@ nav{
     margin-top:-20px;
 }
 nav ul li a{
-    font-size:12px;
+    font-size:13px;
     padding-left:60px;
 }
 nav .logo{
     margin-left:-100px;
     margin-top:-10px;
-    font-size:20px;
+    font-size:25px;
+    font-weight: 500;
 } 
 nav .logo span{
     font-size:30px;
 }
 .icon a{
-    font-size:15px;
+    font-size:18px;
 }
 .slider{
     width: 1495px;
     height:550px;
+}
+.products{
+    width: 1515px;
+    height:400px;
+    padding-left: 10px;
+}
+.items{
+    width:250px;
+    height:330px;
+    background-color: rgb(141, 134, 134);
+    margin-left:40px;
+    margin-top:30px;
 }
 }
