--- a/Css/style.css
+++ b/Css/style.css
@@ -151,3 +151,31 @@ nav .logo span{
     font-size:50px;
     margin-top:10px;
 }
+.services{
+    width: 1872px;
+    display:flex;
+    padding-left:300px;
+}
+.services1 p{
+margin-top:-80px;
+margin-left:130px;
+padding-right:10px;
+font-size:20px;
+font-weight: bold;
+letter-spacing:2px;
+word-spacing:10px;
+}
+.services1 span{
+    margin-left:130px;
+}
+.circle{
+    width:100px;
+    height:100px;
+    border-radius:50px;
+    background-color: orangered;
+    text-align: center;
+    padding-top:20px;
+    color: rgb(255, 255, 255);
+    font-size:50px;
+}
+
