--- a/Css/style1.css
+++ b/Css/style1.css
@@ -80,5 +80,24 @@ nav .logo span{
 }
 .shopnow{
     font-size: 40px;
+    width: 1515px;
+}
+.services{
+    width: 1515px;
+    margin-left:-150px;
+}
+.circle{
+    width:80px;
+    height:80px;
+    font-size:30px;
+}
+.services1 p{
+margin-top:-60px;
+margin-left:100px;
+padding-right:5;
+font-size:20px;
+}
+.services1 span{
+    margin-left:100px;
 }
 }
