--- a/Css/style.css
+++ b/Css/style.css
@@ -62,6 +62,7 @@ nav .logo span{
     width: 1872px;
     height:500px;
     display:flex;
+    background-color: rgb(242, 248, 248);
 }
 .items{
     width:340px;
@@ -150,6 +151,7 @@ nav .logo span{
     text-align:center;
     font-size:50px;
     margin-top:10px;
+    margin-bottom:20px;
 }
 .services{
     width: 1872px;
