--- a/Css/login.css
+++ b/Css/login.css
@@ -2,10 +2,7 @@ body{
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background: url(./images/taxi-dispatch.jpg);
-  background-size:150vh;
-  background-repeat: no-repeat;
-  background-position: top;
+  background-color: rgb(255, 240, 240);
 }
 .box{
     width: 300px;
