--- a/Css/login.css
+++ b/Css/login.css
@@ -39,7 +39,7 @@ body{
     width: 280px;
     border-color: #2ecc71;
 }
-.box input[type ="submit"]{
+.box button{
     text-decoration:none;
     border: 0;
     background: none;
@@ -54,7 +54,7 @@ body{
     transition: 0.25s;
     cursor: pointer;
 }
-.box input[type ="submit"]:hover{
+.box button:hover{
     background: #2ecc71;
     text-decoration:none;
 }
