--- a/Css/style1.css
+++ b/Css/style1.css
@@ -1,6 +1,6 @@
 @media screen and (max-width:1540px){
 nav{
-    width: 1515px;
+    width: 100vw;
     height: 70px;
     margin-top:-20px;
 }
@@ -21,20 +21,20 @@ nav .logo span{
     font-size:18px;
 }
 .slider{
-    width: 1515px;
+    width: 100vw;
     height:550px;
 }
 .products{
-    width: 1515px;
-    height:400px;
-    padding-left: 10px;
+    overflow-x:hidden ;
+    width: 100vw;
+    height:fit-content;
+}
+form{
+    display:calc(1515/5);
 }
 .items{
     width:250px;
     height:330px;
-    background-color: rgb(242, 248, 248);
-    margin-left:40px;
-    margin-top:30px;
 }
 .items img{
     width:250px;
@@ -47,6 +47,7 @@ nav .logo span{
     font-size:20px;
 }
 .items2{
+    text-align: center;
     font-size:20px;
 }
 .items button{
@@ -58,6 +59,7 @@ nav .logo span{
     height:33px;
 }
 .items label{
+    margin-left:20px;
     font-size:20px;
 }
 .items select{
@@ -78,11 +80,10 @@ nav .logo span{
 }
 .shopnow{
     font-size: 40px;
-    width: 1515px;
+    width: 100vw;
 }
 .services{
-    width: 1515px;
-    margin-left:-150px;
+    width: 100vw;
 }
 .circle{
     width:70px;
@@ -92,10 +93,20 @@ nav .logo span{
 .services1 p{
 margin-top:-60px;
 margin-left:100px;
-padding-right:5;
 font-size:20px;
 }
 .services1 span{
     margin-left:100px;
 }
+
+#flexcontainer{
+    overflow-x: hidden;
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    column-gap: 10px;
+    row-gap: 20px;
 }
+
+}
+
