--- a/Css/style1.css
+++ b/Css/style1.css
@@ -29,9 +29,6 @@ nav .logo span{
     width: 100vw;
     height:fit-content;
 }
-form{
-    display:calc(1515/5);
-}
 .items{
     width:250px;
     height:330px;
@@ -50,14 +47,6 @@ form{
     text-align: center;
     font-size:20px;
 }
-.items button{
-    font-size:16px;
-    width: 120px;
-}
-.items button:hover{
-    width: 125px;
-    height:33px;
-}
 .items label{
     margin-left:20px;
     font-size:20px;
@@ -65,13 +54,13 @@ form{
 .items select{
     font-size:20px;
 }
-.items input{
+.cart{
     font-size:16px;
-    width: 120px;
+    width: 125px;
     height:30px;
-    margin-left:8px;
 }
-.items input:hover{
+
+.cart:hover{
     width: 123px;
     height:33px;
 }
@@ -107,6 +96,5 @@ font-size:20px;
     column-gap: 10px;
     row-gap: 20px;
 }
-
 }
 
