--- a/Css/style.css
+++ b/Css/style.css
@@ -184,6 +184,78 @@ word-spacing:10px;
     font-size:50px;
     margin-left:20px;
 }
+.aboutus{
+    width:100vw;
+    height:600px;
+    background-color: black;
+    padding-top:100px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.aboutus1{
+    display: flex;
+}
+.logo2{
+    width:350px;
+    height:300px;
+    margin-left:200px;
+}
+.logo3 p{
+    color:orangered;
+    font-size:30px;
+    font-weight: bold;
+    margin-bottom:20px;
+}
+.logo3 p span{
+    color: rgb(255, 255, 255);
+    font-weight:100;
+}
+.make{
+    color: rgb(179, 177, 177);
+    margin-top:3px;
+    font-size:15px;
+}
+.online{
+    margin-left:150px;
+    width:160px;
+    height:300px;
+}
+.online h4{
+    color: white;
+}
+.online a {
+    color: rgb(179, 177, 177);
+    text-decoration:none;
+}
+.online a:hover{
+    color: orangered;
+}
+.links{
+    display: flex;
+    margin-left:560px;
+    margin-top:50px;
+    width:300px;
+    height:80px;
+}
+.links a {
+    margin-left:50px;
+    font-size:30px;
+    color:  rgb(179, 177, 177) ;
+}
+.links a:hover{
+    color:orangered;
+}
+.copyrights{
+    font-size:15px;
+    word-spacing:7px;
+    margin-top:20px;
+    text-align: center;
+    color:white;
+}
+.copyrights a{
+    font-size:15px;
+    text-decoration:none;
+    color:orangered;
+}
 @media screen and (max-width:1540px){
     nav{
         width: 100vw;
